--- a/config/content.htm
+++ b/config/content.htm
@@ -5,18 +5,18 @@
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:<br/> <br/><br/><br/><br/><br/><br/><br/><br/><span lang="en"></span></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
-<p></p>
+<p>一開始你的leo是黑色的， 如果你想換成白色的</p>
+<p>step1. 到File裡的 Open-Outline</p>
 <p><img alt="" height="494" src="/images/螢幕擷取畫面 2021-03-08 001936.png" width="317"/></p>
-<p></p>
-<p></p>
+<p>Step2.進到你的tmp<span>→cd2021→config</span></p>
 <p><img alt="" height="350" src="/images/1615134022081.jpg" width="554"/></p>
-<p></p>
+<p>Step3. touch pelican.leo</p>
 <p><img alt="" height="347" src="/images/1615134032445.jpg" width="553"/></p>
 <p></p>
-<p></p>
+<p>新建disqus</p>
 <p><img alt="" height="549" src="/images/1615132385371.jpg" width="560"/></p>
 <p></p>
-<p></p>
+<p>改設定到遠端的pelican 劃紅線的是需要改的設定  discqus sitename 填你新建disqus的名字(Webside name)</p>
 <p><img alt="" height="313" src="/images/1615133741671.jpg" width="563"/></p>
 <p></p>
 <h2>edit Reveal</h2>
