--- a/content/edit Reveal.html
+++ b/content/edit Reveal.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li>
+                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <br /><h1>edit Reveal</h1>
-<p></p><br />edit blog << <a href='edit blog.html'>Previous</a> </div>
+    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='week.html'>Next</a> >> week<br /><h1>edit Reveal</h1>
+<p></p>
+<p></p>
+<br />edit blog << <a href='edit blog.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
     <!-- footer -->
       <div class="container">
