--- a/content/week.html
+++ b/content/week.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Introduction.html'>Next</a> >> Introduction<br /><h1>HOME</h1>
-<br /> <a href='Introduction.html'>Next</a> >> Introduction</div>
+    <div id="tipue_search_content">edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week1.html'>Next</a> >> week1<br /><h1>week</h1>
+<br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week1.html'>Next</a> >> week1</div>
         
     <!-- footer -->
       <div class="container">
