--- a/content/week2.html
+++ b/content/week2.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Introduction.html'>Next</a> >> Introduction<br /><h1>HOME</h1>
-<br /> <a href='Introduction.html'>Next</a> >> Introduction</div>
+    <div id="tipue_search_content">week1 << <a href='week1.html'>Previous</a> <br /><h1>week2</h1>
+<p></p>
+<p></p><br />week1 << <a href='week1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
