reveal.leo 的編輯操作

--- a/config/content.htm
+++ b/config/content.htm
@@ -18,9 +18,18 @@
 <p></p>
 <p>改設定到遠端的pelican 劃紅線的是需要改的設定  discqus sitename 填你新建disqus的名字(Webside name)</p>
 <p><img alt="" height="313" src="/images/1615133741671.jpg" width="563"/></p>
+<p>指令 @others 就是可以當編輯這個網頁要編輯下一張的時候，下一張的開頭位置會是你上一張結尾的後面</p>
+<p>可以繼續編排不會亂</p>
 <p></p>
 <h2>edit Reveal</h2>
-<p></p>
+<p>1.先進入Leo</p>
+<p><img alt="" height="282" src="/images/1615380265464.jpg" width="562"/></p>
+<p>2.到cd2021<span>➝config</span></p>
+<p><img alt="" height="356" src="/images/1615134022081.jpg" width="564"/></p>
+<p>3.選擇下面的reveal.leo</p>
+<p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
+<p>4.就可以開始編輯了</p>
+<p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
 <p></p>
 <h1>week</h1>
 <h2>week1</h2>
@@ -38,5 +47,7 @@
 <li><span>此外, 為了讓各組在 stage1 分組協同實習過程, 能透過網誌發表各組組員在 W2-W4 過程中的各項作為與心得報告, 說明可利用 Leo Editor 協助 CMSiMDE 中的 Pelican 發表協同網誌, 其目的是讓各分組在協同期間, 能完整呈現各階段所留下的網誌紀錄. 但此方式必須熟悉 Leo Editor 的操作, 因此有關透過 Pelican 建立協同網誌一事, 除利用 Leo Editor 協助設定並建立 pelican 網誌外, 也將此議題列為各組在 Stage1 協同產品設計流程中必選題目之二, 請各組詳細說明採用或不採用 Leo Editor 的兩種情況下, 各組員在設定與建立協同網誌的過程所可能遭遇或產生的問題與解決方案.</span></li>
 </ol>
 <h2>week2</h2>
+<p></p>
+<p></p>
 <p></p>
 <p></p>
