--- a/content/edit blog.html
+++ b/content/edit blog.html
@@ -147,6 +147,8 @@ img.add_border {
 <p></p>
 <p>改設定到遠端的pelican 劃紅線的是需要改的設定  discqus sitename 填你新建disqus的名字(Webside name)</p>
 <p><img alt="" height="313" src="./../images/1615133741671.jpg" width="563"/></p>
+<p>指令 @others 就是可以當編輯這個網頁要編輯下一張的時候，下一張的開頭位置會是你上一張結尾的後面</p>
+<p>可以繼續編排不會亂</p>
 <p></p>
 <br />leo << <a href='leo.html'>Previous</a> <a href='edit Reveal.html'>Next</a> >> edit Reveal</div>
         
