--- a/content/edit Reveal.html
+++ b/content/edit Reveal.html
@@ -134,7 +134,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='week.html'>Next</a> >> week<br /><h1>edit Reveal</h1>
-<p></p>
+<p>1.先進入Leo</p>
+<p><img alt="" height="282" src="./../images/1615380265464.jpg" width="562"/></p>
+<p>2.到cd2021<span>➝config</span></p>
+<p><img alt="" height="356" src="./../images/1615134022081.jpg" width="564"/></p>
+<p>3.選擇下面的reveal.leo</p>
+<p><img alt="" height="347" src="./../images/1615380359702.jpg" width="561"/></p>
+<p>4.就可以開始編輯了</p>
+<p><img alt="" height="1039" src="./../images/1615380702356.jpg" width="1527"/></p>
 <p></p>
 <br />edit blog << <a href='edit blog.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
