--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -22,8 +22,14 @@
 <p>可以繼續編排不會亂</p>
 <p></p>
 <h2>edit Reveal</h2>
-<p></p>
-<p></p>
+<p>1.先進入Leo</p>
+<p><img alt="" height="282" src="/images/1615380265464.jpg" width="562"/></p>
+<p>2.到cd2021<span>➝config</span></p>
+<p><img alt="" height="356" src="/images/1615134022081.jpg" width="564"/></p>
+<p>3.選擇下面的reveal.leo</p>
+<p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
+<p>4.就可以開始編輯了</p>
+<p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
 <p></p>
 <h1>week</h1>
 <h2>week1</h2>
