--- a/config/content.htm
+++ b/config/content.htm
@@ -2,7 +2,9 @@
 <h2>Introduction</h2>
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
-<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:<br/> <br/><br/><br/><br/><br/><br/><br/><br/><span lang="en"></span></p>
+<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:</p>
+<p><br/><br/><br/><span lang="en"></span></p>
+<p></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
 <p>一開始你的leo是黑色的， 如果你想換成白色的</p>
@@ -30,7 +32,24 @@
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
-<p></p>
+<h1><span>repositories create</span></h1>
+<p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
+<p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
+<p><span>(2)download  <a href="https://drive.google.com/file/d/1R6vAAWdNDigmyvFFQTKyM-XNKOWeCFJU/view">kmol2021 spring  v2.7z</a></span></p>
+<p><span>(3) 改 gitconfig</span><span> </span></p>
+<p><strong><strong style="font-style: italic;"> </strong></strong></p>
+<p><span><img alt="" height="447" src="/images/1615443540301.jpg" width="567"/></span></p>
+<p><span><img alt="" height="747" src="/images/1615443508822.jpg" width="563"/></span></p>
+<p><span></span></p>
+<p>(4)Repository:<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
+<p>  利用 cmstemplate 建立以 CMSiMDE 作為子模組的動態與靜態網站方法為:</p>
+<ol>
+<li>登入 Github 帳號</li>
+<li>將瀏覽器指向<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
+</ol>
+<p><span> </span></p>
+<p><span></span></p>
+<p><span></span></p>
 <h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
