--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,7 +2,9 @@
 <h2>Introduction</h2>
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
-<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:<br/> <br/><br/><br/><br/><br/><br/><br/><br/><span lang="en"></span></p>
+<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:</p>
+<p><br/><br/><br/><span lang="en"></span></p>
+<p></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
 <p>一開始你的leo是黑色的， 如果你想換成白色的</p>
@@ -30,7 +32,7 @@
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
-<p></p>
+<h1><span>repositories create</span></h1>
 <h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
@@ -47,6 +49,11 @@
 <li><span>此外, 為了讓各組在 stage1 分組協同實習過程, 能透過網誌發表各組組員在 W2-W4 過程中的各項作為與心得報告, 說明可利用 Leo Editor 協助 CMSiMDE 中的 Pelican 發表協同網誌, 其目的是讓各分組在協同期間, 能完整呈現各階段所留下的網誌紀錄. 但此方式必須熟悉 Leo Editor 的操作, 因此有關透過 Pelican 建立協同網誌一事, 除利用 Leo Editor 協助設定並建立 pelican 網誌外, 也將此議題列為各組在 Stage1 協同產品設計流程中必選題目之二, 請各組詳細說明採用或不採用 Leo Editor 的兩種情況下, 各組員在設定與建立協同網誌的過程所可能遭遇或產生的問題與解決方案.</span></li>
 </ol>
 <h2>week2</h2>
+<p>我們的主題 及 進度說明</p>
+<p><span>題目:套圈遊樂器</span><br/><span>動機:經常於夜市中看到的套圈圈，於軟體中進行模擬與參數調整，對其分析統整，求得各類結果</span><br/><span>第二周:零件創建與機構改善</span><br/><span>第三周:軟體模擬與程式編輯</span><br/><span>第四周:統整結果與報告內容</span></p>
+<p><span></span></p>
+<p><span>這是把圈圈送到上面的運輸機構</span></p>
+<p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
 <p></p>
 <p></p>
 <p></p>
