--- a/config/content.htm
+++ b/config/content.htm
@@ -32,7 +32,7 @@
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
-<h1><span>repositories create</span></h1>
+<h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
 <p><span>(2)download  <a href="https://drive.google.com/file/d/1R6vAAWdNDigmyvFFQTKyM-XNKOWeCFJU/view">kmol2021 spring  v2.7z</a></span></p>
@@ -47,10 +47,11 @@
 <li>登入 Github 帳號</li>
 <li>將瀏覽器指向<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
 </ol>
-<p><span> </span></p>
+<p><img alt="" height="308" src="/images/1615446445939.jpg" width="563"/></p>
+<p><span> (5) inside the page</span></p>
 <p><span></span></p>
 <p><span></span></p>
-<h1>week</h1>
+<p><span></span></p><h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
