--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -33,6 +33,23 @@
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
 <h1><span>repositories create</span></h1>
+<p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
+<p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
+<p><span>(2)download  <a href="https://drive.google.com/file/d/1R6vAAWdNDigmyvFFQTKyM-XNKOWeCFJU/view">kmol2021 spring  v2.7z</a></span></p>
+<p><span>(3) 改 gitconfig</span><span> </span></p>
+<p><strong><strong style="font-style: italic;"> </strong></strong></p>
+<p><span><img alt="" height="447" src="/images/1615443540301.jpg" width="567"/></span></p>
+<p><span><img alt="" height="747" src="/images/1615443508822.jpg" width="563"/></span></p>
+<p><span></span></p>
+<p>(4)Repository:<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
+<p>  利用 cmstemplate 建立以 CMSiMDE 作為子模組的動態與靜態網站方法為:</p>
+<ol>
+<li>登入 Github 帳號</li>
+<li>將瀏覽器指向<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
+</ol>
+<p><span> </span></p>
+<p><span></span></p>
+<p><span></span></p>
 <h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
