--- a/content/Introduction.html
+++ b/content/Introduction.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
+                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,7 +137,7 @@ img.add_border {
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:</p>
-<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><span lang="en"></span></p>
+<p><br/><br/><br/><span lang="en"></span></p>
 <p></p>
 <br />HOME << <a href='HOME.html'>Previous</a> <a href='leo.html'>Next</a> >> leo</div>
         
