--- a/content/week.html
+++ b/content/week.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
+                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week1.html'>Next</a> >> week1<br /><h1>week</h1>
-<br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week1.html'>Next</a> >> week1</div>
+    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1<br /><h1>week</h1>
+<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1</div>
         
     <!-- footer -->
       <div class="container">
