--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -48,10 +48,31 @@
 <li>將瀏覽器指向<span> </span><a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
 </ol>
 <p><img alt="" height="308" src="/images/1615446445939.jpg" width="563"/></p>
-<p><span> (5) inside the page</span></p>
+<p><span> (5) inside the page 填寫資料</span></p>
+<p><span><img alt="" height="254" src="/images/1615379419301.jpg" width="569"/></span></p>
+<p><span>(6) 打指令 git clone --recurse-submodules https://github.com/40823111/cd2021.git</span></p>
+<p><span><img alt="" height="289" src="/images/1615441848121.jpg" width="555"/></span></p>
+<p>(7)進入 cd2021<span>→cmsimde→up_dir(裡面有5個檔案)</span></p>
+<ol>
+<li><span>init.py</span><span> </span>- 其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號.</li>
+<li><span>http-server.py</span><span> </span>- 執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁.</li>
+<li><span>cms.bat</span><span> </span>- 讓使用者執行動態網站用的批次檔案.</li>
+<li><span>acp.bat</span><span> </span>- 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
+</ol>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p>(7) 完成後 就可以git push</p>
+<p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
-<p><span></span></p>
-<p><span></span></p><h1>week</h1>
+<p></p><h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
