--- a/content/repositories create.html
+++ b/content/repositories create.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HOME.html'>HOME</a><ul class='dropdown'><li><a href='Introduction.html'>Introduction</a></li></ul><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
+                     <li><a href='HOME.html'>HOME</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -173,7 +173,8 @@ img.add_border {
 <p>(7) 完成後 就可以git push</p>
 <p><img alt="" height="288" src="./../images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
-<p></p><br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
+<p></p>
+<br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='week.html'>Next</a> >> week</div>
         
     <!-- footer -->
       <div class="container">
