--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,4 @@
-<h1>HOME</h1>
+<h1>Home</h1>
 <p>Introduction</p>
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
