--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,4 @@
-<h1>Home</h1>
-<p>Introduction</p>
+<h1>Introduction</h1>
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:</p>
@@ -70,10 +69,15 @@
 <p></p>
 <p></p>
 <p>(7) 完成後 就可以git push</p>
+<p>acp.bat 內容</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">echo off
+set message=%1
+git add .
+git commit -m %message%
+git push</pre>
 <p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
-<p></p>
-<h1>week</h1>
+<p></p><h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
