--- a/content/week3.html
+++ b/content/week3.html
@@ -133,13 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week1 << <a href='week1.html'>Previous</a> <a href='week3.html'>Next</a> >> week3<br /><h1>week2</h1>
-<p>我們的主題 及 進度說明</p>
-<p><span>題目:套圈遊樂器</span><br/><span>動機:經常於夜市中看到的套圈圈，於軟體中進行模擬與參數調整，對其分析統整，求得各類結果</span><br/><span>第二周:零件創建與機構改善</span><br/><span>第三周:軟體模擬與程式編輯</span><br/><span>第四周:統整結果與報告內容</span></p>
-<p><span></span></p>
-<p><span>這是把圈圈送到上面的運輸機構</span></p>
-<p><img alt="" height="380" src="./../images/1615381525022.jpg" width="566"/></p>
-<br />week1 << <a href='week1.html'>Previous</a> <a href='week3.html'>Next</a> >> week3</div>
+    <div id="tipue_search_content">week2 << <a href='week2.html'>Previous</a> <br /><h1>week3</h1>
+<p>機構完成 運送機構改善配合及組裝</p>
+<p></p>
+<p></p>
+<p></p><br />week2 << <a href='week2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
