--- a/config/content.htm
+++ b/config/content.htm
@@ -30,7 +30,7 @@
 <p>3.選擇下面的reveal.leo</p>
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
-<p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
+<p><img alt="" height="382" src="/images/1615380702356.jpg" width="562"/></p>
 <h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
@@ -58,17 +58,15 @@
 <li><span>cms.bat</span><span> </span>- 讓使用者執行動態網站用的批次檔案.</li>
 <li><span>acp.bat</span><span> </span>- 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
 </ol>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p><img alt="" height="477" src="/images/螢幕擷取畫面 2021-03-11 152457.png" width="560"/></p>
 <p></p>
 <p>(7) 完成後 就可以git push</p>
+<p>acp.bat 內容</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">echo off
+set message=%1
+git add .
+git commit -m %message%
+git push</pre>
 <p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
 <p></p>
@@ -93,7 +91,8 @@
 <p><span></span></p>
 <p><span>這是把圈圈送到上面的運輸機構</span></p>
 <p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
-<p></p>
+<h2>week3</h2>
+<p>機構完成 運送機構改善配合及組裝</p>
 <p></p>
 <p></p>
 <p></p>
