--- a/content/old repositories update.html
+++ b/content/old repositories update.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1<br /><h1>week</h1>
-<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1</div>
+    <div id="tipue_search_content">edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create<br /><h1>old repositories update</h1>
+<p></p>
+<p></p><br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create</div>
         
     <!-- footer -->
       <div class="container">
