--- a/config/content.htm
+++ b/config/content.htm
@@ -31,7 +31,9 @@
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="382" src="/images/1615380702356.jpg" width="562"/></p>
-<h1>repositories create</h1>
+<h1>old repositories update</h1>
+<p></p>
+<p></p><h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
 <p><span>(2)download  <a href="https://drive.google.com/file/d/1R6vAAWdNDigmyvFFQTKyM-XNKOWeCFJU/view">kmol2021 spring  v2.7z</a></span></p>
@@ -92,7 +94,9 @@ git push</pre>
 <p><span>這是把圈圈送到上面的運輸機構</span></p>
 <p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
 <h2>week3</h2>
-<p>機構完成 運送機構改善配合及組裝</p>
-<p></p>
-<p></p>
+<p>1.機構完成 運送機構改善配合及組裝</p>
+<p><img alt="" height="400" src="/images/1615645697398.jpg" width="558"/></p>
+<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
+<h2>week4</h2>
 <p></p>
