--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -30,7 +30,9 @@
 <p>3.選擇下面的reveal.leo</p>
 <p><img alt="" height="347" src="/images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
-<p><img alt="" height="1039" src="/images/1615380702356.jpg" width="1527"/></p>
+<p><img alt="" height="382" src="/images/1615380702356.jpg" width="562"/></p>
+<h1>old repositories update</h1>
+<p></p>
 <h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
@@ -58,15 +60,7 @@
 <li><span>cms.bat</span><span> </span>- 讓使用者執行動態網站用的批次檔案.</li>
 <li><span>acp.bat</span><span> </span>- 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
 </ol>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p><img alt="" height="477" src="/images/螢幕擷取畫面 2021-03-11 152457.png" width="560"/></p>
 <p></p>
 <p>(7) 完成後 就可以git push</p>
 <p>acp.bat 內容</p>
@@ -77,7 +71,8 @@ git commit -m %message%
 git push</pre>
 <p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
-<p></p><h1>week</h1>
+<p></p>
+<h1>week</h1>
 <h2>week1</h2>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
@@ -98,7 +93,10 @@ git push</pre>
 <p><span></span></p>
 <p><span>這是把圈圈送到上面的運輸機構</span></p>
 <p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
-<p></p>
-<p></p>
-<p></p>
+<h2>week3</h2>
+<p>1.機構完成 運送機構改善配合及組裝</p>
+<p><img alt="" height="400" src="/images/1615645697398.jpg" width="558"/></p>
+<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
+<h2>week4</h2>
 <p></p>
