--- a/content/edit Reveal.html
+++ b/content/edit Reveal.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create<br /><h1>edit Reveal</h1>
+    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update<br /><h1>edit Reveal</h1>
 <p>1.先進入Leo</p>
 <p><img alt="" height="282" src="./../images/1615380265464.jpg" width="562"/></p>
 <p>2.到cd2021<span>➝config</span></p>
@@ -142,7 +142,7 @@ img.add_border {
 <p><img alt="" height="347" src="./../images/1615380359702.jpg" width="561"/></p>
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="382" src="./../images/1615380702356.jpg" width="562"/></p>
-<br />edit blog << <a href='edit blog.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create</div>
+<br />edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update</div>
         
     <!-- footer -->
       <div class="container">
