--- a/content/week4.html
+++ b/content/week4.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1<br /><h1>week</h1>
-<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='week1.html'>Next</a> >> week1</div>
+    <div id="tipue_search_content">week3 << <a href='week3.html'>Previous</a> <br /><h1>week4</h1>
+<p></p><br />week3 << <a href='week3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
