--- a/config/content.htm
+++ b/config/content.htm
@@ -32,7 +32,15 @@
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="382" src="/images/1615380702356.jpg" width="562"/></p>
 <h1>old repositories update</h1>
+<p>1.因為舊的repositiors和更新版只差7個更新檔案，所以只需要git pull 更新檔案就好、所以</p>
+<p>Step1.到你的cmsimde <span>→ </span>git pull origin master</p>
+<p><img alt="" height="292" src="/images/1.jpg" width="560"/></p>
+<p>Step2.他就會顯示已經download 7個檔案</p>
+<p><img alt="" height="291" src="/images/2.jpg" width="560"/></p>
 <p></p>
+<p></p>
+<p></p>
+<p><img alt="" height="575" src="/images/3.jpg" width="563"/></p>
 <p></p><h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
