--- a/content/old repositories update.html
+++ b/content/old repositories update.html
@@ -134,7 +134,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create<br /><h1>old repositories update</h1>
+<p>1.因為舊的repositiors和更新版只差7個更新檔案，所以只需要git pull 更新檔案就好、所以</p>
+<p>Step1.到你的cmsimde <span>→ </span>git pull origin master</p>
+<p><img alt="" height="292" src="./../images/1.jpg" width="560"/></p>
+<p>Step2.他就會顯示已經download 7個檔案</p>
+<p><img alt="" height="291" src="./../images/2.jpg" width="560"/></p>
 <p></p>
+<p></p>
+<p></p>
+<p><img alt="" height="575" src="./../images/3.jpg" width="563"/></p>
 <p></p><br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create</div>
         
     <!-- footer -->
