--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -105,10 +105,14 @@ git push</pre>
 <p><span>這是把圈圈送到上面的運輸機構</span></p>
 <p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
 <h2>week3</h2>
-<h3>機構</h3>
-<p>1.機構完成 運送機構改善配合及組裝</p>
+<h3>機構 程式</h3>
+<p>1.機構完成 運送機構改善配合及組裝(inventor 組合圖)</p>
 <p><img alt="" height="400" src="/images/1615645697398.jpg" width="558"/></p>
+<p> 各種零件檔</p>
 <p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
+<h3>改良</h3>
+<p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
+<p></p>
 <h2>week4</h2>
 <p></p>
