--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,7 +136,7 @@ img.add_border {
     <div id="tipue_search_content"> <a href='leo.html'>Next</a> >> leo<br /><h1>Introduction</h1>
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
-<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲:</p>
+<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
 <p><br/><br/><br/><span lang="en"></span></p>
 <p></p>
 <br /> <a href='leo.html'>Next</a> >> leo</div>
