--- a/content/week3.html
+++ b/content/week3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4<br /><h1>week3</h1>
-<p>1.機構完成 運送機構改善配合及組裝</p>
-<p><img alt="" height="400" src="./../images/1615645697398.jpg" width="558"/></p>
-<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
-<br />week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4</div>
+    <div id="tipue_search_content">week2 << <a href='week2.html'>Previous</a> <a href='機構 程式.html'>Next</a> >> 機構 程式<br /><h1>week3</h1>
+<br />week2 << <a href='week2.html'>Previous</a> <a href='機構 程式.html'>Next</a> >> 機構 程式</div>
         
     <!-- footer -->
       <div class="container">
