--- a/content/機構 程式.html
+++ b/content/機構 程式.html
@@ -133,24 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">leo << <a href='leo.html'>Previous</a> <a href='edit Reveal.html'>Next</a> >> edit Reveal<br /><h1>edit blog</h1>
-<p>一開始你的leo是黑色的， 如果你想換成白色的</p>
-<p>step1. 到File裡的 Open-Outline</p>
-<p><img alt="" height="494" src="./../images/螢幕擷取畫面 2021-03-08 001936.png" width="317"/></p>
-<p>Step2.進到你的tmp<span>→cd2021→config</span></p>
-<p><img alt="" height="350" src="./../images/1615134022081.jpg" width="554"/></p>
-<p>Step3. touch pelican.leo</p>
-<p><img alt="" height="347" src="./../images/1615134032445.jpg" width="553"/></p>
-<p></p>
-<p>新建disqus</p>
-<p><img alt="" height="549" src="./../images/1615132385371.jpg" width="560"/></p>
-<p></p>
-<p>改設定到遠端的pelican 劃紅線的是需要改的設定  discqus sitename 填你新建disqus的名字(Webside name)</p>
-<p><img alt="" height="313" src="./../images/1615133741671.jpg" width="563"/></p>
-<p>指令 @others 就是可以當編輯這個網頁要編輯下一張的時候，下一張的開頭位置會是你上一張結尾的後面</p>
-<p>可以繼續編排不會亂</p>
-<p></p>
-<br />leo << <a href='leo.html'>Previous</a> <a href='edit Reveal.html'>Next</a> >> edit Reveal</div>
+    <div id="tipue_search_content">week3 << <a href='week3.html'>Previous</a> <a href='改良.html'>Next</a> >> 改良<br /><h1>機構 程式</h1>
+<p>1.機構完成 運送機構改善配合及組裝(inventor 組合圖)</p>
+<p><img alt="" height="400" src="./../images/1615645697398.jpg" width="558"/></p>
+<p> 各種零件檔</p>
+<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
+<br />week3 << <a href='week3.html'>Previous</a> <a href='改良.html'>Next</a> >> 改良</div>
         
     <!-- footer -->
       <div class="container">
