--- a/config/content.htm
+++ b/config/content.htm
@@ -115,4 +115,11 @@ git push</pre>
 <p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
 <p></p>
 <h2>week4</h2>
+<p>1.工程圖</p>
+<p><img alt="" height="402" src="/images/Inventor_9Oy4NiufCt.png" width="571"/></p>
 <p></p>
+<p>2.爆炸圖</p>
+<p><img alt="" height="394" src="/images/Inventor_7MZQCBKZ7G.png" width="568"/></p>
+<p></p>
+<p>3.完成品</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
