--- a/content/week4.html
+++ b/content/week4.html
@@ -134,6 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">改良 << <a href='改良.html'>Previous</a> <br /><h1>week4</h1>
+<p></p>
+<p>工程圖</p>
 <p></p><br />改良 << <a href='改良.html'>Previous</a> </div>
         
     <!-- footer -->
