--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,6 +2,8 @@
 <p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
+<p><span>Stage2</span></p>
+<p><span><br/><span>分組倉儲:</span></span></p>
 <p><br/><br/><br/><span lang="en"></span></p>
 <p></p>
 <h1>leo</h1>
@@ -123,3 +125,7 @@ git push</pre>
 <p></p>
 <p>3.完成品</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
+<h2>week5</h2>
+<p>step2 題目 : 自動打球機及手動接球</p>
+<p></p>
+<h2>week6</h2>
