--- a/content/week5.html
+++ b/content/week5.html
@@ -133,15 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='leo.html'>Next</a> >> leo<br /><h1>Introduction</h1>
-<p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
-<pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
-<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
-<p><span>Stage2</span></p>
-<p><span><br/><span>分組倉儲:</span></span></p>
-<p><br/><br/><br/><span lang="en"></span></p>
+    <div id="tipue_search_content">week4 << <a href='week4.html'>Previous</a> <a href='week6.html'>Next</a> >> week6<br /><h1>week5</h1>
+<p>step2 題目 : 自動打球機及手動接球</p>
+<p>設計 自動送球機構 及 接球手套</p>
 <p></p>
-<br /> <a href='leo.html'>Next</a> >> leo</div>
+<br />week4 << <a href='week4.html'>Previous</a> <a href='week6.html'>Next</a> >> week6</div>
         
     <!-- footer -->
       <div class="container">
