--- a/content/week5.html
+++ b/content/week5.html
@@ -137,6 +137,9 @@ img.add_border {
 <p>step2 題目 : 自動打球機及手動接球</p>
 <p>設計 自動送球機構 及 接球手套</p>
 <p></p>
+<p>meeting</p>
+<p></p>
+<p></p>
 <br />week4 << <a href='week4.html'>Previous</a> <a href='week6.html'>Next</a> >> week6</div>
         
     <!-- footer -->
