--- a/content/week6.html
+++ b/content/week6.html
@@ -136,6 +136,8 @@ img.add_border {
     <div id="tipue_search_content">week5 << <a href='week5.html'>Previous</a> <br /><h1>week6</h1>
 <p>創建協同</p>
 <p>step1</p>
+<p>step2</p>
+<p>step3</p>
 <p></p><br />week5 << <a href='week5.html'>Previous</a> </div>
         
     <!-- footer -->
