--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -138,3 +138,6 @@ git push</pre>
 <p>step2</p>
 <p>step3</p>
 <h2>week7</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
+<p>模擬失敗 </p>
+<p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
