--- a/content/week7.html
+++ b/content/week7.html
@@ -136,7 +136,11 @@ img.add_border {
     <div id="tipue_search_content">week6 << <a href='week6.html'>Previous</a> <br /><h1>week7</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
 <p>模擬失敗 </p>
-<p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p><br />week6 << <a href='week6.html'>Previous</a> </div>
+<p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
+<p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
+<p><img alt="" height="425" src="./../images/44085.jpg" width="239"/>   <img alt="" height="239" src="./../images/messageImage_1618473034644.jpg" width="302"/></p>
+<p></p>
+<p></p><br />week6 << <a href='week6.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
