--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,7 +3,7 @@
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
 <p><span>Stage2</span></p>
-<p><span><br/><span>分組倉儲:</span></span></p>
+<p><span><br/><span>分組倉儲:stage1 ag6</span></span></p>
 <p><br/><br/><br/><span lang="en"></span></p>
 <p></p>
 <h1>leo</h1>
@@ -127,13 +127,17 @@ git push</pre>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
 <h2>week5</h2>
 <p>step2 題目 : 自動打球機及手動接球</p>
-<p>設計 自動送球機構 及 接球手套</p>
-<p></p>
-<p>meeting</p>
-<p></p>
+<p>設計 自動送球機構 及 接球手套 機械手臂打球(打者) 和 手動機械手臂接球(防守者)</p>
 <p></p>
 <h2>week6</h2>
-<p>創建協同</p>
+<h3>設計理想</h3>
+<ol>
+<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
+<li>使用類似螺紋的概念把球輸送到想要的平台</li>
+<li>希望可以把球的軌跡沿著螺旋線上升</li>
+<li>做成一個循迴機構</li>
+</ol>
+<h3>創建協同</h3>
 <p>step1</p>
 <p>step2</p>
 <p>step3</p>
@@ -141,3 +145,7 @@ git push</pre>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
 <p>模擬失敗 </p>
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
+<p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
+<p><img alt="" height="425" src="/images/44085.jpg" width="239"/>   <img alt="" height="239" src="/images/messageImage_1618473034644.jpg" width="302"/></p>
+<p></p>
+<p></p>
