--- a/content/設計理想.html
+++ b/content/設計理想.html
@@ -133,15 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='leo.html'>Next</a> >> leo<br /><h1>Introduction</h1>
-<p>Github:  <a href="https://github.com/40823111/cd2021">許耀中的Github</a></p>
-<pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
-<p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
-<p><span>Stage2</span></p>
-<p><span><br/><span>分組倉儲:stage1 ag6</span></span></p>
-<p><br/><br/><br/><span lang="en"></span></p>
-<p></p>
-<br /> <a href='leo.html'>Next</a> >> leo</div>
+    <div id="tipue_search_content">week6 << <a href='week6.html'>Previous</a> <a href='創建協同.html'>Next</a> >> 創建協同<br /><h1>設計理想</h1>
+<ol>
+<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
+<li>使用類似螺紋的概念把球輸送到想要的平台</li>
+<li>希望可以把球的軌跡沿著螺旋線上升</li>
+<li>做成一個循迴機構</li>
+</ol>
+<br />week6 << <a href='week6.html'>Previous</a> <a href='創建協同.html'>Next</a> >> 創建協同</div>
         
     <!-- footer -->
       <div class="container">
