--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -128,7 +128,6 @@ git push</pre>
 <h2>week5</h2>
 <p>step2 題目 : 自動打球機及手動接球</p>
 <p>設計 自動送球機構 及 接球手套 機械手臂打球(打者) 和 手動機械手臂接球(防守者)</p>
-<p></p>
 <h2>week6</h2>
 <h3>設計理想</h3>
 <ol>
@@ -147,5 +146,5 @@ git push</pre>
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
 <p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
 <p><img alt="" height="425" src="/images/44085.jpg" width="239"/>   <img alt="" height="239" src="/images/messageImage_1618473034644.jpg" width="302"/></p>
-<p></p>
+<h2>week8</h2>
 <p></p>
