--- a/content/week8.html
+++ b/content/week8.html
@@ -133,16 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">改良 << <a href='改良.html'>Previous</a> <a href='week5.html'>Next</a> >> week5<br /><h1>week4</h1>
-<p>1.工程圖</p>
-<p><img alt="" height="402" src="./../images/Inventor_9Oy4NiufCt.png" width="571"/></p>
-<p></p>
-<p>2.爆炸圖</p>
-<p><img alt="" height="394" src="./../images/Inventor_7MZQCBKZ7G.png" width="568"/></p>
-<p></p>
-<p>3.完成品</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
-<br />改良 << <a href='改良.html'>Previous</a> <a href='week5.html'>Next</a> >> week5</div>
+    <div id="tipue_search_content">week7 << <a href='week7.html'>Previous</a> <br /><h1>week8</h1>
+<p>手套</p><br />week7 << <a href='week7.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
