--- a/config/content.htm
+++ b/config/content.htm
@@ -137,8 +137,8 @@ git push</pre>
 <li>做成一個循迴機構</li>
 </ol>
 <h3>創建協同</h3>
-<p>step1</p>
-<p>step2</p>
+<p>step1 組長創一個創一個respoitory    組員創一個和組長一模一樣的<span>respoitory的名子</span></p>
+<p>step2 組長</p>
 <p>step3</p>
 <h2>week7</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
@@ -148,3 +148,4 @@ git push</pre>
 <p><img alt="" height="425" src="/images/44085.jpg" width="239"/>   <img alt="" height="239" src="/images/messageImage_1618473034644.jpg" width="302"/></p>
 <h2>week8</h2>
 <p>手套</p>
+<h2>week9</h2>
