--- a/content/week9.html
+++ b/content/week9.html
@@ -133,13 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week3 << <a href='week3.html'>Previous</a> <a href='改良.html'>Next</a> >> 改良<br /><h1>機構 程式</h1>
-<p>1.機構完成 運送機構改善配合及組裝(inventor 組合圖)</p>
-<p><img alt="" height="400" src="./../images/1615645697398.jpg" width="558"/></p>
-<p> 各種零件檔</p>
-<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
-<br />week3 << <a href='week3.html'>Previous</a> <a href='改良.html'>Next</a> >> 改良</div>
+    <div id="tipue_search_content">week8 << <a href='week8.html'>Previous</a> <br /><h1>week9</h1><br />week8 << <a href='week8.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
