--- a/config/content.htm
+++ b/config/content.htm
@@ -138,7 +138,9 @@ git push</pre>
 </ol>
 <h3>創建協同</h3>
 <p>step1 組長創一個創一個respoitory    組員創一個和組長一模一樣的<span>respoitory的名子</span></p>
-<p>step2 組長</p>
+<p><span>step2 在github裡new respoitory 互相邀請 </span></p>
+<p>step3 組長 git clone --recurse-submodules https://github.com/40823111/cd2021.git</p>
+<p><img alt="" height="296" src="/images/1615441848121.jpg" width="567"/></p>
 <p>step3</p>
 <h2>week7</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
