--- a/content/創建協同.html
+++ b/content/創建協同.html
@@ -135,7 +135,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">設計理想 << <a href='設計理想.html'>Previous</a> <a href='week7.html'>Next</a> >> week7<br /><h1>創建協同</h1>
 <p>step1 組長創一個創一個respoitory    組員創一個和組長一模一樣的<span>respoitory的名子</span></p>
-<p>step2 組長</p>
+<p><span>step2 在github裡new respoitory 互相邀請 </span></p>
+<p>step3 組長 git clone --recurse-submodules https://github.com/40823111/cd2021.git</p>
+<p><img alt="" height="296" src="./../images/1615441848121.jpg" width="567"/></p>
 <p>step3</p>
 <br />設計理想 << <a href='設計理想.html'>Previous</a> <a href='week7.html'>Next</a> >> week7</div>
         
