--- a/config/content.htm
+++ b/config/content.htm
@@ -141,7 +141,10 @@ git push</pre>
 <p><span>step2 在github裡new respoitory 互相邀請 </span></p>
 <p>step3 組長 git clone --recurse-submodules https://github.com/40823111/cd2021.git</p>
 <p><img alt="" height="296" src="/images/1615441848121.jpg" width="567"/></p>
-<p>step3</p>
+<p>step3  git remote add 組員的學號 https://github.com/<span>組員的學號</span>/stage2-ag6.git</p>
+<p>          組長授權給組員</p>
+<p>流程示意圖</p>
+<p><img alt="" height="426" src="/images/222.jpg" width="567"/></p>
 <h2>week7</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
 <p>模擬失敗 </p>
@@ -149,5 +152,5 @@ git push</pre>
 <p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
 <p><img alt="" height="425" src="/images/44085.jpg" width="239"/>   <img alt="" height="239" src="/images/messageImage_1618473034644.jpg" width="302"/></p>
 <h2>week8</h2>
-<p>手套</p>
+<p>手套 </p>
 <h2>week9</h2>
