--- a/content/創建協同.html
+++ b/content/創建協同.html
@@ -138,7 +138,10 @@ img.add_border {
 <p><span>step2 在github裡new respoitory 互相邀請 </span></p>
 <p>step3 組長 git clone --recurse-submodules https://github.com/40823111/cd2021.git</p>
 <p><img alt="" height="296" src="./../images/1615441848121.jpg" width="567"/></p>
-<p>step3</p>
+<p>step3  git remote add 組員的學號 https://github.com/<span>組員的學號</span>/stage2-ag6.git</p>
+<p>          組長授權給組員</p>
+<p>流程示意圖</p>
+<p><img alt="" height="426" src="./../images/222.jpg" width="567"/></p>
 <br />設計理想 << <a href='設計理想.html'>Previous</a> <a href='week7.html'>Next</a> >> week7</div>
         
     <!-- footer -->
