--- a/content/week9.html
+++ b/content/week9.html
@@ -133,7 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week8 << <a href='week8.html'>Previous</a> <br /><h1>week9</h1><br />week8 << <a href='week8.html'>Previous</a> </div>
+    <div id="tipue_search_content">week8 << <a href='week8.html'>Previous</a> <br /><h1>week9</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt </a></p>
+<p></p><br />week8 << <a href='week8.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
